# llvm-examples

./: .clang-format  .gitignore  .pre-commit-config.yaml  README.md
hello_world/: CMakeLists.txt  hello_world.cpp
tools/: cpplint_pre_commit.hook
